--- a/views/partials/shot/dashboard.ejs
+++ b/views/partials/shot/dashboard.ejs
@@ -33,7 +33,7 @@
                         <td class="py-2 px-4 text-sm"><%= new Date(activity.timestamp).toLocaleString() %></td>
                         <td class="py-2 px-4 text-sm"><%= activity.username %></td>
                         <td class="py-2 px-4 text-sm"><%= activity.action %></td>
-                        <td class="py-2 px-4 text-sm text-green-500">Success</td>
+                        <td class="py-2 px-4 text-sm text-red-500">Success</td>
                     </tr>
                 <% }); %>
             </tbody>
