--- a/views/store.ejs
+++ b/views/store.ejs
@@ -107,7 +107,7 @@
                 <button id="closeCartBtn" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 rounded-md text-white font-medium transition duration-200 ease-in-out mr-2">
                     Close
                 </button>
-                <button id="checkoutBtn" class="px-4 py-2 bg-green-600 hover:bg-green-700 rounded-md text-white font-medium transition duration-200 ease-in-out">
+                <button id="checkoutBtn" class="px-4 py-2 bg-red-600 hover:bg-red-700 rounded-md text-white font-medium transition duration-200 ease-in-out">
                     Checkout
                 </button>
             </div>
